fixed header layout problem

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 
 @media screen and (max-width: 720px) {
   .card {
-    width: 100%;
+    width: 95%;
   }
 }
 
