--- a/src/components/nav/Header.css
+++ b/src/components/nav/Header.css
@@ -1,6 +1,4 @@
 header {
-  position: fixed;
-  top: 0;
   width: 100%;
   height: 60px;
   z-index: 2000;
